Fix/light dark mode (#63)
* Styled login/signup pages to be uniform with the rest of the application

* fixed light and dark mode

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -18,13 +18,14 @@ html, body {
 }
 
 #root {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background: #000000;
-  color: #ffffff;
   margin: 0;
   position: relative;
 }
